# WSLForward

./: Claude.md  README.en.md  README.md  README.zh-CN.md  TODO.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/i18n/: index.ts
