[package]
name = "wslforward"
version = "0.1.0"
description = "WSL2 port forwarding manager"
authors = ["InsHomePgup"]
edition = "2021"

[lib]
name = "wslforward_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
